--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,9 @@
 <app-header title="Action-Sheet"></app-header>
 
 <ion-content class="ion-padding">
-  <h1>Action Sheet</h1>
+
+  <ion-button expand="full" (click)="presentActionSheet()">
+    Show Action Sheet
+  </ion-button>
+
 </ion-content>
