--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,5 +1,6 @@
-<app-header title="Alert Page"></app-header>
+<app-header [title]="title || 'Alert Page'"></app-header>
 
 <ion-content class="ion-padding">
-  <h1>Alert Page</h1>
+  <ion-button expand="full" (click)="presentAlert()">Alert</ion-button>
+  <ion-button color="secondary" expand="full" (click)="presentAlertPrompt()">Input</ion-button>
 </ion-content>
