--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,14 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Components</ion-title>
+    <ion-buttons slot="start">
+      <!-- <ion-button (click)="toggleMenu()">
+        <ion-icon slot="icon-only" name="menu"></ion-icon>
+      </ion-button> -->
+
+      <ion-menu-button color="primary" menu="first"></ion-menu-button>
+
+    </ion-buttons>
+    <ion-title color="primary">Components</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,8 +16,8 @@
 
 
   <ion-list>
-    <ion-item *ngFor="let c of components" [routerLink]="c.redirectTo" detail>
-      <ion-icon slot="start" [name]="c.icon"></ion-icon>
+    <ion-item *ngFor="let c of components | async" [routerLink]="c.redirectTo" detail>
+      <ion-icon slot="start" [name]="c.icon" color="primary"></ion-icon>
       <ion-label> {{ c.name }} </ion-label>
     </ion-item>
 
