--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,32 @@
 <ion-app>
+  
+  
+  <ion-split-pane contentId="main" when="md">
+    
+    <!-- <app-menu></app-menu> -->
+    <ion-menu side="start" menuId="first" contentId="main">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Main Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+    
+          <ion-menu-toggle autoHide="false" *ngFor="let c of components | async">
+            <ion-item [routerLink]="c.redirectTo">
+              <ion-icon [name]="c.icon" slot="start"></ion-icon>
+              <ion-label>{{ c.name }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+    
+    
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    
 
-  <app-menu></app-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
+
 </ion-app>
